--- a/src/main/resources/assets/mmorpg/lang/en_us.json
+++ b/src/main/resources/assets/mmorpg/lang/en_us.json
@@ -160,7 +160,7 @@
 	"mmorpg.item_tips.rarity_tip": "Rarity: ",
 	"mmorpg.item_tips.remaining_aura_capacity": "Remaining Aura Capacity: ",
 	"mmorpg.item_tips.restores": "Restores: %1$s%%",
-	"mmorpg.item_tips.rune_item_usage": "All Runewords are shown in the Wiki.\nUse to view craftable Runewords.",
+	"mmorpg.item_tips.rune_item_usage": "Use on Gear with sockets to Insert\nIf same rune is already socketed, rerolls it\n\nAll Runewords are shown in the Wiki.\nUse to view craftable Runewords.",
 	"mmorpg.item_tips.socket_extractor_usage": "Click on gear to extract a gem.",
 	"mmorpg.item_tips.soul_cleaner_usage_and_warning": "Click on items to remove their soul.\nThe item remains but the stats will be deleted.",
 	"mmorpg.item_tips.soul_extractor_tip": "Click on items to extract their soul.\nWorks only on that rarity.\nDeletes the Item in the process.",
@@ -844,57 +844,11 @@
 	"mmorpg.rarity..legendary": "Legendary",
 	"mmorpg.rarity..mythic": "Mythic",
 	"mmorpg.rarity..rare": "Rare",
-	"mmorpg.rarity..runeword": "Rune Word",
+	"mmorpg.rarity..runeword": "Runed",
 	"mmorpg.rarity..uncommon": "Uncommon",
 	"mmorpg.rarity..unique": "Unique",
 
 "_comment": " [CATEGORY]: RARITIES - NAMES",
-
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
-
-	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
-	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
-	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
-	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
-	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"mmorpg.currency.level_up_orb": "Orb of Infinity",
-	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
-	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
-	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
-	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
-	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
-	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
-	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.orb_of_quality": "Orb of Quality",
-	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
-	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
-	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
-	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
-	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
-	"mmorpg.currency.socket_adder": "Orb of Digging",
-	"item.mmorpg.currency.socket_adder": "Orb of Digging",
-	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
-	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
-
-"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
@@ -929,6 +883,52 @@
 	"mmorpg.effect.wounds": "Wounds",
 
 "_comment": " [CATEGORY]: STATUSEFFECTS - NAMES",
+
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
+
+	"mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"item.mmorpg.currency.affix_tier_up_down": "Orb of Imbalance",
+	"mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_affix_upgrade": "Entangled Orb of Imbalance",
+	"item.mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_quality": "Entangled Orb of Quality",
+	"mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"item.mmorpg.currency.entangled_unique_reroll": "Entangled Orb of Imperfection",
+	"mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"item.mmorpg.currency.level_up_orb": "Orb of Infinity",
+	"mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"item.mmorpg.currency.mastery_seal0": "Spiritual Mastery Seal",
+	"mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal1": "Celestial Mastery Seal",
+	"item.mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal2": "Empyrean Mastery Seal",
+	"mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal3": "Angelic Mastery Seal",
+	"item.mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal4": "Divine Mastery Seal",
+	"mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"item.mmorpg.currency.mastery_seal5": "Godly Mastery Seal",
+	"mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.orb_of_quality": "Orb of Quality",
+	"item.mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone0": "Spiritual Sharpening Stone",
+	"mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone1": "Celestial Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"mmorpg.currency.sharpening_stone2": "Empyrean Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone3": "Angelic Sharpening Stone",
+	"mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone4": "Divine Sharpening Stone",
+	"item.mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"mmorpg.currency.sharpening_stone5": "Godly Sharpening Stone",
+	"item.mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.socket_adder": "Orb of Digging",
+	"mmorpg.currency.unique_reroll": "Orb of Imperfection",
+	"item.mmorpg.currency.unique_reroll": "Orb of Imperfection",
+
+"_comment": " [CATEGORY]: CURRENCY ITEMS - NAMES",
 
 
 "_comment": " [CATEGORY]: TALENTS - NAMES",
@@ -976,7 +976,7 @@
 	"mmorpg.talent.critical_damage_big": "Major Crit Damage",
 	"mmorpg.talent.critical_hit_big": "Major Crit Chance",
 	"mmorpg.talent.crossbow_damage_big": "Major Crossbow Damage",
-	"mmorpg.talent.curse_duration_big": "Major mmorpg.tag.effect.curse Effect Duration",
+	"mmorpg.talent.curse_duration_big": "Major Curse Effect Duration",
 	"mmorpg.talent.curse_effect_big": "Major Curse Effect Strength",
 	"mmorpg.talent.curse_master": "Curse Master",
 	"mmorpg.talent.defender": "Defender",
@@ -1099,7 +1099,7 @@
 	"mmorpg.talent.sniper": "Sniper",
 	"mmorpg.talent.song_cdr_big": "Major Song Spell Cooldown Reduction",
 	"mmorpg.talent.song_damage_big": "Major Song Damage",
-	"mmorpg.talent.song_duration_big": "Major mmorpg.tag.effect.song Effect Duration",
+	"mmorpg.talent.song_duration_big": "Major Song Effect Duration",
 	"mmorpg.talent.song_effect_big": "Major Song Effect Strength",
 	"mmorpg.talent.spell_all_damage_big": "Major All Spells Damage",
 	"mmorpg.talent.spell_atk_style_dmg": "Major Magic Damage",
@@ -1298,7 +1298,7 @@
 	"mmorpg.stat.arrow_spell_dmg": "Arrow Damage",
 	"mmorpg.stat.arrow_spell_dmg_taken": "Arrow Damage Taken",
 	"mmorpg.stat.attack_damage": "Attack Damage",
-	"mmorpg.stat.augment_eff_dur_u_cast": "mmorpg.tag.effect.augment Effect Duration",
+	"mmorpg.stat.augment_eff_dur_u_cast": "Augment Effect Duration",
 	"mmorpg.stat.aura_effect": "Aura Effect",
 	"mmorpg.stat.axe_damage": "Axe Damage",
 	"mmorpg.stat.beast_cdr": "Beast Spell Cooldown Reduction",
@@ -1369,7 +1369,7 @@
 	"mmorpg.stat.critical_hit": "Crit Chance",
 	"mmorpg.stat.crossbow_damage": "Crossbow Damage",
 	"mmorpg.stat.curse_cdr": "Curse Spell Cooldown Reduction",
-	"mmorpg.stat.curse_eff_dur_u_cast": "mmorpg.tag.effect.curse Effect Duration",
+	"mmorpg.stat.curse_eff_dur_u_cast": "Curse Effect Duration",
 	"mmorpg.stat.curse_spell_dmg": "Curse Damage",
 	"mmorpg.stat.curse_spell_dmg_taken": "Curse Damage Taken",
 	"mmorpg.stat.damage_cdr": "Damage Spell Cooldown Reduction",
@@ -1377,7 +1377,7 @@
 	"mmorpg.stat.damage_spell_dmg": "Damage Damage",
 	"mmorpg.stat.damage_spell_dmg_taken": "Damage Damage Taken",
 	"mmorpg.stat.damage_to_cursed": "Damage to Cursed Enemies",
-	"mmorpg.stat.defensive_eff_dur_u_cast": "mmorpg.tag.effect.defensive Effect Duration",
+	"mmorpg.stat.defensive_eff_dur_u_cast": "Defensive Effect Duration",
 	"mmorpg.stat.dex_dmg": "Ranged Damage",
 	"mmorpg.stat.dex_dmg_received": "Ranged Damage Received",
 	"mmorpg.stat.dexterity": "Dexterity",
@@ -1465,7 +1465,7 @@
 	"mmorpg.stat.fishing_medium_drop_bonus": "Rare Drops",
 	"mmorpg.stat.fishing_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.fishing_triple_drop": "Triple Drop Chance",
-	"mmorpg.stat.food_eff_dur_u_cast": "mmorpg.tag.effect.food Effect Duration",
+	"mmorpg.stat.food_eff_dur_u_cast": "Food Effect Duration",
 	"mmorpg.stat.freeze_chance": "Freeze Chance",
 	"mmorpg.stat.freeze_damage": "Freeze Damage",
 	"mmorpg.stat.freeze_duration": "Freeze Duration",
@@ -1488,7 +1488,7 @@
 	"mmorpg.stat.heal_cdr": "Heal Spell Cooldown Reduction",
 	"mmorpg.stat.heal_cleanse": "\u00A77Your \u00A7e\u2605 Heal Spells \u00A77have a \u00A7a[VAL1]\u00A77% chance to cleanse a negative effect.",
 	"mmorpg.stat.heal_effect_on_self": "Healing Received",
-	"mmorpg.stat.heal_over_time_eff_dur_u_cast": "mmorpg.tag.effect.heal_over_time Effect Duration",
+	"mmorpg.stat.heal_over_time_eff_dur_u_cast": "Heal over time Effect Duration",
 	"mmorpg.stat.heal_spell_dmg": "Heal Damage",
 	"mmorpg.stat.heal_spell_dmg_taken": "Heal Damage Taken",
 	"mmorpg.stat.health": "Health",
@@ -1512,7 +1512,7 @@
 	"mmorpg.stat.husbandry_medium_drop_bonus": "Rare Drops",
 	"mmorpg.stat.husbandry_misc_drop_bonus": "Misc Drops",
 	"mmorpg.stat.husbandry_triple_drop": "Triple Drop Chance",
-	"mmorpg.stat.immobilizing_eff_dur_u_cast": "mmorpg.tag.effect.immobilizing Effect Duration",
+	"mmorpg.stat.immobilizing_eff_dur_u_cast": "Immobilizing Effect Duration",
 	"mmorpg.stat.inc_aoe": "Area of Effect",
 	"mmorpg.stat.inc_effect_of_augment_buff_given": "Augment Effect Strength",
 	"mmorpg.stat.inc_effect_of_augment_buff_on_you": "[VAL1]% to effectiveness of Augment buffs on you",
@@ -1698,9 +1698,9 @@
 	"mmorpg.stat.movement_cdr": "Movement Spell Cooldown Reduction",
 	"mmorpg.stat.movement_spell_dmg": "Movement Damage",
 	"mmorpg.stat.movement_spell_dmg_taken": "Movement Damage Taken",
-	"mmorpg.stat.negative_eff_dur_u_cast": "mmorpg.tag.effect.negative Effect Duration",
+	"mmorpg.stat.negative_eff_dur_u_cast": "Negative Effect Duration",
 	"mmorpg.stat.non_crit_damage": "Non Critical Damage",
-	"mmorpg.stat.offensive_eff_dur_u_cast": "mmorpg.tag.effect.offensive Effect Duration",
+	"mmorpg.stat.offensive_eff_dur_u_cast": "Offensive Effect Duration",
 	"mmorpg.stat.out_of_combat_regen": "Out of Combat Regen",
 	"mmorpg.stat.phys_to_all": "Physical to All Damage",
 	"mmorpg.stat.phys_to_chaos": "Physical to Chaos Damage",
@@ -1770,7 +1770,7 @@
 	"mmorpg.stat.poison_proc_chance": "Shatter Chance",
 	"mmorpg.stat.poison_resistance": "Poison Resistance",
 	"mmorpg.stat.poison_strength": "Poison Strength",
-	"mmorpg.stat.positive_eff_dur_u_cast": "mmorpg.tag.effect.positive Effect Duration",
+	"mmorpg.stat.positive_eff_dur_u_cast": "Positive Effect Duration",
 	"mmorpg.stat.proj_dmg_received": "Projectile Damage Receieved",
 	"mmorpg.stat.projectile_barrage": "Projectiles Barrage",
 	"mmorpg.stat.projectile_cdr": "Projectile Spell Cooldown Reduction",
@@ -1801,7 +1801,7 @@
 	"mmorpg.stat.shout_spell_dmg": "Shout Damage",
 	"mmorpg.stat.shout_spell_dmg_taken": "Shout Damage Taken",
 	"mmorpg.stat.song_cdr": "Song Spell Cooldown Reduction",
-	"mmorpg.stat.song_eff_dur_u_cast": "mmorpg.tag.effect.song Effect Duration",
+	"mmorpg.stat.song_eff_dur_u_cast": "Song Effect Duration",
 	"mmorpg.stat.song_spell_dmg": "Song Damage",
 	"mmorpg.stat.song_spell_dmg_taken": "Song Damage Taken",
 	"mmorpg.stat.spell_all_damage": "All Spells Damage",
@@ -2336,6 +2336,7 @@
 	"mmorpg.stat_desc.heal_cdr": "Reduces spell cooldown of spells with the tag.",
 	"mmorpg.stat_desc.heal_effect_on_self": "Increases spell related heals on you.",
 	"mmorpg.stat_desc.health": "Increases your total hearts amount.",
+	"mmorpg.stat_desc.health_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
 	"mmorpg.stat_desc.health_per_sec": "Restore % of your total per regen tick.",
 	"mmorpg.stat_desc.health_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.hit_damage": "Increases damage hits deal.",
@@ -2348,6 +2349,26 @@
 	"mmorpg.stat_desc.husbandry_misc_drop_bonus": "Prof drops are split into categories, this stat increases the droprate of one such",
 	"mmorpg.stat_desc.husbandry_triple_drop": "Chance for profession to triple the drop, if it happens",
 	"mmorpg.stat_desc.inc_aoe": "Spell aoe effects will be larger",
+	"mmorpg.stat_desc.inc_effect_of_augment_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_augment_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_curse_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_curse_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_defensive_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_defensive_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_food_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_food_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_heal_over_time_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_heal_over_time_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_immobilizing_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_immobilizing_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_negative_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_negative_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_offensive_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_offensive_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_positive_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_positive_buff_on_you": "Increases the stat strength of effects you receive",
+	"mmorpg.stat_desc.inc_effect_of_song_buff_given": "Increases the stat strength of effects you give",
+	"mmorpg.stat_desc.inc_effect_of_song_buff_on_you": "Increases the stat strength of effects you receive",
 	"mmorpg.stat_desc.inc_leech": "Affects all resource leech stats like: onhit, leech dmg, on kill restore etc",
 	"mmorpg.stat_desc.increase_healing": "Increases spell related heals.",
 	"mmorpg.stat_desc.increased_quantity": "Increases amount of loot found in chests",
@@ -2368,6 +2389,7 @@
 	"mmorpg.stat_desc.magic_shield_per_sec": "Restore % of your total per regen tick.",
 	"mmorpg.stat_desc.magic_shield_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.mana": "Mana is used to cast spells",
+	"mmorpg.stat_desc.mana_on_kill": "Leeches resource every time you kill an enemy. This is capped as all other leech",
 	"mmorpg.stat_desc.mana_per_sec": "Restore % of your total per regen tick.",
 	"mmorpg.stat_desc.mana_regen": "Restores this much every few seconds.",
 	"mmorpg.stat_desc.mana_shield": "Percent of damage is absorbed by mana. This effect only works if mana is not less than 50 percent capacity. Mana shield is applied after magic shield.",
