fix ko_kr localization
fix ko_kr

--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -384,7 +384,7 @@
  "mmorpg.spell.curse_of_despair": "절망의 저주",
  "mmorpg.spell.curse_of_weak": "나약함의 저주",
  "mmorpg.spell.dash": "대쉬",
- "mmorpg.spell.draconic_blood": "드라코닉의 피",
+ "mmorpg.spell.draconic_blood": "드래곤의 피",
  "mmorpg.spell.entangling_seed": "석화의 씨앗",
  "mmorpg.spell.execute": "집행",
  "mmorpg.spell.explode_minions": "자폭명령",
@@ -819,7 +819,7 @@
  "mmorpg.effect.bone_chill": "오한",
  "mmorpg.effect.charm": "매혹",
  "mmorpg.effect.despair": "절망의 저주",
- "mmorpg.effect.draconic_blood": "그래곤의 피",
+ "mmorpg.effect.draconic_blood": "드래곤의 피",
  "mmorpg.effect.ground": "좌초",
  "mmorpg.effect.inner_calm": "내면의 평온",
  "mmorpg.effect.mage_circle": "마법진",
@@ -1121,7 +1121,7 @@
  "mmorpg.word.not_a_potential_consumer": "사용 시 잠재력을 소모하지 않음",
  "mmorpg.word.nothing": "꽝",
  "mmorpg.word.on_slots": "슬롯: ",
- "mmorpg.word.per_stack": " (초당 스택): ",
+ "mmorpg.word.per_stack": " (초당 중첩): ",
  "mmorpg.word.pet_basic": "소환수 기본 공격:",
  "mmorpg.word.player_affixes": "플레이어 수식어",
  "mmorpg.word.potential_cost": "잠재력 소모: %1$s",
@@ -1453,7 +1453,7 @@
  "mmorpg.stat.learn_curse_of_despair": "절망의 저주 습득",
  "mmorpg.stat.learn_curse_of_weak": "나약함의 저주 습득",
  "mmorpg.stat.learn_dash": "대쉬 습득",
- "mmorpg.stat.learn_draconic_blood": "드라코닉의 피 습득",
+ "mmorpg.stat.learn_draconic_blood": "드래곤의 피 습득",
  "mmorpg.stat.learn_entangling_seed": "석화의 씨앗 습득",
  "mmorpg.stat.learn_execute": "집행 습득",
  "mmorpg.stat.learn_explode_minions": "자폭명령 습득",
@@ -1887,7 +1887,7 @@
  "mmorpg.chat.lack_aura_capacity": "오라를 장착하기 위해 필요한 오라 수용량이 부족합니다.",
  "mmorpg.chat.level_up_message_down": "%1$s 레벨: %2$s > %3$s!",
  "mmorpg.chat.level_up_message_up": "레벨 업!",
- "mmorpg.chat.max_stacks": "최대 스택: %1$s",
+ "mmorpg.chat.max_stacks": "최대 중첩: %1$s",
  "mmorpg.chat.need_empty_socket": "빈 소켓이 필요합니다.",
  "mmorpg.chat.need_pearl": "사용하려면 인벤토리에 %1$s가 하나 이상 있어야 합니다.",
  "mmorpg.chat.needs_an_affix": "아이템에 수식어가 필요합니다.",
@@ -1945,52 +1945,52 @@
  "item.mmorpg.currency.desc.sharpening_stone5": "아이템의 품질을 12% 업그레이드하며, 한 번만 사용할 수 있습니다.",
  "item.mmorpg.currency.desc.socket_adder": "소켓을 추가할 수 있습니다.",
  "item.mmorpg.currency.desc.unique_reroll": "고유 스탯이 5% 증가 또는 감소합니다.",
- "spell.desc.arrow_barrage": "화살을 연속으로 발사하여 [calc:arrow_storm] §6☀ 물리§7 피해를 줍니다.",
- "spell.desc.arrow_storm": "화살이 호를 그리며 발사하여 [calc:arrow_storm] §6☀ 물리§7 피해를 줍니다.",
- "spell.desc.arrow_totem": "화살을 빠르게 쏘는 토템을 소환하여 [calc:arrow_totem] §6☀ 물리§7 피해를 줍니다.",
+ "spell.desc.arrow_barrage": "화살을 연속으로 발사하여 [calc:arrow_storm] §6☀ 물리§7 피해를 입힙니다.",
+ "spell.desc.arrow_storm": "화살이 호를 그리며 발사하여 [calc:arrow_storm] §6☀ 물리§7 피해를 입힙니다.",
+ "spell.desc.arrow_totem": "화살을 빠르게 쏘는 토템을 소환하여 [calc:arrow_totem] §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.astral_totem": "토템을 소환하여 주위 아군의 [calc:totem_mana] 마나를 회복시킵니다.",
  "spell.desc.awaken_mana": "[calc:awaken_mana] 마나를 회복합니다.",
  "spell.desc.black_hole": "주변의 적을 끌어당기는 어둠의 구체를 소환하고, 사라지면서 [calc:black_hole] §5☀ 혼돈§7 피해를 입힙니다.",
- "spell.desc.boomerang": "투사체로 적에게 [calc:boomerang] §6☀ 물리§7 피해를 줍니다.",
- "spell.desc.chain_lightning": "연쇄 번개로 적을 공격하여 [calc:lightning_spear] §e☀ 번개§7 피해를 줍니다.",
- "spell.desc.chaos_totem": "혼돈 메테오를 생성하는 토템을 소환하여 일정 지역에 [calc:chaos_totem] §5☀ 혼돈§7 피해를 줍니다.",
- "spell.desc.charge": "한 방향으로 돌진하여 격돌 시 [calc:charge] §6☀ 물리§7 광역 피해를 줍니다.",
- "spell.desc.charged_bolt": "느린 충전 화살을 발사하여 적을 관통하고 [calc:charged_bolt] §e☀ 번개§7 피해를 경로 반경에 줍니다.",
- "spell.desc.chilling_field": "뼛속까지 서늘한 서리 구름을 생성하여 적에게 매초 [calc:chilling_field]§b☀ 냉기§7 피해를 주고, 감속 및 오한을 겁니다.",
+ "spell.desc.boomerang": "투사체로 적에게 [calc:boomerang] §6☀ 물리§7 피해를 입힙니다.",
+ "spell.desc.chain_lightning": "연쇄 번개로 적을 공격하여 [calc:lightning_spear] §e☀ 번개§7 피해를 입힙니다.",
+ "spell.desc.chaos_totem": "혼돈 메테오를 생성하는 토템을 소환하여 일정 지역에 [calc:chaos_totem] §5☀ 혼돈§7 피해를 입힙니다.",
+ "spell.desc.charge": "한 방향으로 돌진하여 격돌 시 [calc:charge] §6☀ 물리§7 광역 피해를 입힙니다.",
+ "spell.desc.charged_bolt": "느린 충전 화살을 발사하여 적을 관통하며 [calc:charged_bolt] §e☀ 번개§7 피해를 입힙니다.",
+ "spell.desc.chilling_field": "뼛속까지 서늘한 서리 구름을 생성하여 적에게 매초 [calc:chilling_field]§b☀ 냉기§7 피해를 입히고, 감속 및 오한을 겁니다.",
  "spell.desc.chilling_touch": "전방의 적을 공격하여 [calc:chilling_touch] §b☀ 냉기§7 피해를 입히고 소환수에게 공격을 명령합니다.",
  "spell.desc.circle_of_healing": "[calc:circle_of_healing] 만큼의 광역 회복을 시전합니다.",
- "spell.desc.curse_of_agony": "고통의 저주로 적에게 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 줍니다.",
- "spell.desc.curse_of_despair": "절망의 저주로 적에게 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 줍니다.",
- "spell.desc.curse_of_weak": "나약함의 저주로 적에게 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 줍니다.",
+ "spell.desc.curse_of_agony": "적에게 고통의 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 입힙니다.",
+ "spell.desc.curse_of_despair": "적에게 절망의 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 입힙니다.",
+ "spell.desc.curse_of_weak": "적에게 나약함의 저주를 걸어 [calc:curse] §5☀ 혼돈§7 피해를 입힙니다.",
  "spell.desc.dash": "빠르게 앞으로 돌진하며, 가벼운 깃털 효과를 얻습니다.",
  "spell.desc.draconic_blood": "주위 동료들에게 이로운 효과를 줍니다.",
  "spell.desc.entangling_seed": "적을 석화 시키는 씨앗을 던집니다.",
- "spell.desc.execute": "전방의 적을 베어 [calc:execute] §6☀ 물리§7 피해를 줍니다.",
+ "spell.desc.execute": "전방의 적을 베어 [calc:execute] §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.explode_minions": "소환수들을 자폭시켜 [calc:explode_minion] §c☀ 화염§7피해를 입힙니다. 소환수의 체력에 따라 피해가 증가합니다.",
- "spell.desc.explosive_arrow": "화살을 발사하여 적중 시 범위 내에 [calc:explosive_arrow] §c☀ 화염§7 피해를 줍니다.",
- "spell.desc.fire_nova": "주변을 화염에 휩싸이게 하여 [calc:fire_nova] §c☀ 화염§7 피해를 주위 적에게 줍니다.",
+ "spell.desc.explosive_arrow": "화살을 발사하여 적중 시 범위 내에 [calc:explosive_arrow] §c☀ 화염§7 피해를 입힙니다.",
+ "spell.desc.fire_nova": "주변을 화염에 휩싸이게 하여 주위 적에게 [calc:fire_nova] §c☀ 화염§7 피해를 입힙니다.",
  "spell.desc.fire_trap": "지면에 남아 있다가 적이 접근하면 활성화되는 함정을 던져 주변 지역에 [calc:ranger_trap]§c☀ 화염§7 피해를 입힙니다.",
- "spell.desc.fireball": "화염구를 던져 [calc:fireball] §c☀ 화염§7 피해를 줍니다.",
+ "spell.desc.fireball": "화염구를 던져 [calc:fireball] §c☀ 화염§7 피해를 입힙니다.",
  "spell.desc.flame_strike": "전방의 적을 공격하여 [calc:flame_strike] §c☀ 화염§7 피해를 입힙니다.",
  "spell.desc.frost_flower": "매초마다 [calc:flower_flower] §b☀냉기§7 피해를 입히는 서리 토템을 소환합니다.",
  "spell.desc.frost_nova": "서리 폭풍을 소환하여 주변에 [calc:frost_nova] §b☀냉기§7피해를 입힙니다.",
  "spell.desc.frost_trap": "지면에 남아 있다가 적이 접근하면 활성화되는 함정을 던져 주변 지역에 [calc:ranger_trap]§b☀ 냉기§7 피해를 입힙니다.",
- "spell.desc.frostball": "얼음 조각을 던져 [calc:iceball] §b☀ 냉기§7 피해를 입히고 오한을 중첩시킵니다.",
+ "spell.desc.frostball": "얼음 조각을 던져 [calc:iceball] §b☀ 냉기§7 피해를 입히고, 오한을 중첩시킵니다.",
  "spell.desc.frozen_orb": "서리 오브를 던져 천천히 적을 향해 날아가며, 적중 시 [calc:iceball] §b☀ 냉기§7 광역 피해를 줍니다.",
  "spell.desc.gale_wind": "여러 개의 구름을 소환하여 밀쳐내고 [calc:gale_wind] §6☀ 물리§7 피해를 줍니다.",
- "spell.desc.garden_of_thorns": "시전 지역에 [calc:thorn_consume] §6☀ 물리§7 피해와 가시를 걸고, 자신에게는 내면의 평온을 부여하여 매초 [calc:inner_calm] 마나를 회복합니다.",
- "spell.desc.gong_strike": "주위의 적을 내리쳐 [calc:gong_strike] §6☀ 물리§7 피해를 줍니다.",
+ "spell.desc.garden_of_thorns": "시전 지역에 [calc:thorn_consume] §6☀ 물리§7 피해를 입히며 가시를 걸고, 자신에게는 내면의 평온을 부여하여 매초 [calc:inner_calm] 마나를 회복합니다.",
+ "spell.desc.gong_strike": "주위의 적을 내리쳐 [calc:gong_strike] §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.healing_aura": "주위 아군의 [calc:healing_aura] 생명력을 회복합니다.",
  "spell.desc.heart_of_ice": "주위 아군의 [calc:heart_of_ice] 생명력을 회복합니다.",
  "spell.desc.hunter_potion": "물약을 마시면 [calc:hunter_pot_heal] 생명력이 회복됩니다.",
  "spell.desc.ice_comet": "하늘에서 떨어지는 얼음 메테오를 소환하여, [calc:ice_comet] §c☀ 냉기§7 피해를 입힙니다.",
  "spell.desc.lightning_nova": "주위 적에게 [calc:lightning_nova] §e☀ 번개§7 피해를 입힙니다.",
- "spell.desc.lightning_spear": "번개 송곳을 던져 [calc:lightning_spear] §e☀ 번개§7 피해를 줍니다.",
+ "spell.desc.lightning_spear": "번개 송곳을 던져 [calc:lightning_spear] §e☀ 번개§7 피해를 입힙니다.",
  "spell.desc.lightning_totem": "매 초마다 [calc:lightning_totem] §e☀번개§7피해를 입히는 번개 토템을 소환합니다.",
  "spell.desc.mage_circle": "마법진을 소환합니다. 원 안에 서 있으면 공격력이 증가합니다. 일정 시간이 지나면 해당 위치로 순간이동합니다.",
  "spell.desc.magma_flower": "매 초마다 [calc:magma_flower] §c☀화염§7 피해를 입히는 화염 토템을 소환합니다.",
  "spell.desc.meteor": "하늘에서 떨어지는 메테오를 소환하여, [calc:meteor] §c☀ 화염§7 피해를 입힙니다.",
- "spell.desc.meteor_arrow": "화살을 발사하여 [calc:meteor] §6☀ 물리§7 피해를 주고 [calc:meteor] §c☀ 화염§7 피해를 주는 메테오를 소환합니다.",
+ "spell.desc.meteor_arrow": "화살을 발사하여 [calc:meteor] §6☀ 물리§7 피해를 입히고, [calc:meteor] §c☀ 화염§7 피해를 입히는 메테오를 소환합니다.",
  "spell.desc.pet_basic": "단일 대상에게 기본 공격 [calc:pet_basic] 만큼의 §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.poison_ball": "독 구슬을 날려 [calc:poisonball] §5☀ 혼돈§7 피해를 입힙니다.",
  "spell.desc.poison_cloud": "유독 가스를 분출하여 주위 적에게 [calc:poison_cloud] §5☀ 혼돈§7 피해를 입힙니다.",
@@ -2003,11 +2003,11 @@
  "spell.desc.rejuv_totem": "토템을 소환하여 주위 아군의 [calc:totem_heal] 생명력을 회복시킵니다.",
  "spell.desc.rejuvenation": "주변 아군에게 [calc:rejuvenation] 지속 힐 버프를 부여합니다.",
  "spell.desc.resonance": "화음의 공을 던져, [calc:resonance] §6☀ 물리§7피해를 입히며, 매혹에 걸린 적에게 맞을 시 폭발합니다.",
- "spell.desc.return_summons": "소환된 소환수를 불러들이고 그들의 체력을 [calc:healing_aura] 회복시킵니다.",
- "spell.desc.ritardando": "느린 화음의 파동을 던져, 적중시킨 적들에게 [calc:ritardando] §6☀ 물리§7 피해를 주고 둔화시킵니다.",
+ "spell.desc.return_summons": "소환된 소환수를 불러들이고, 그들의 체력을 [calc:healing_aura] 회복시킵니다.",
+ "spell.desc.ritardando": "느린 화음의 파동을 던져, 적중시킨 적들에게 [calc:ritardando] §6☀ 물리§7 피해를 입히고 둔화시킵니다.",
  "spell.desc.shooting_star": "별을 발사하여 적중 시 [calc:shooting_star] 생명력을 회복시킵니다.",
- "spell.desc.shred": "주변의 모든 적을 베어 [calc:shred] §6☀ 물리§7 피해를 입히고 방어력을 감소시킵니다.",
- "spell.desc.smoke_bomb": "연막탄을 던져 적의 눈을 멀게 하고 위협을 줄입니다.",
+ "spell.desc.shred": "주변의 모든 적을 베어 [calc:shred] §6☀ 물리§7 피해를 입히고, 방어력을 감소시킵니다.",
+ "spell.desc.smoke_bomb": "연막탄을 던져 적의 눈을 멀게 하고, 위협을 줄입니다.",
  "spell.desc.song_of_perseverance": "주변의 모든 아군에게 인내 중첩 효과를 부여합니다.",
  "spell.desc.song_of_valor": "주위의 모든 아군에게 용맹 중첩 효과를 부여합니다.",
  "spell.desc.song_of_vigor": "주위의 모든 아군에게 기력 중첩 효과를 부여합니다.",
@@ -2024,9 +2024,9 @@
  "spell.desc.thorn_bush": "가시 덤불을 소환하여 매초 일정 범위에 [calc:thorn_bush]§6☀ 물리§7 피해를 주고 가시를 겁니다. 가시에 걸린 적은 기본 공격을 받을 때마다 가시 중첩이 소모되며 [calc:thorn_consume] §6☀ 물리§7 피해를 입습니다.",
  "spell.desc.tidal_strike": "[calc:tidal_strike] §b☀ 냉기§7 피해로 전방의 적을 타격합니다.",
  "spell.desc.undying_will": "자신에게 버프를 겁니다.",
- "spell.desc.vamp_blood": "주위 동료들에게 이로운 효과를 줍니다.",
- "spell.desc.whirlwind": "빙글빙글 돌며 주위의 적에게 [calc:whirlwind] §6☀ 물리§7 피해를 줍니다.",
- "spell.desc.wish": "주위의 아군의 생명력을 [calc:wish] 만큼의 회복시킵니다.",
+ "spell.desc.vamp_blood": "주위 동료들에게 이로운 효과를 부여합니다.",
+ "spell.desc.whirlwind": "빙글빙글 돌며 주위의 적에게 [calc:whirlwind] §6☀ 물리§7 피해를 입힙니다.",
+ "spell.desc.wish": "주위 아군의 생명력을 [calc:wish] 만큼의 회복시킵니다.",
  "mmorpg.stat_desc.accuracy": "적중 확률이 증가합니다. 명중률이 낮으면 적중하지 않고, 상대가 회피할 확률이 증가합니다.",
  "mmorpg.stat_desc.ailment_damage": "상태이상 피해가 증가합니다",
  "mmorpg.stat_desc.alchemy_core_drop_bonus": "전문기술 드랍은 여러 카테고리로 나뉘며, 이 스탯은 해당 카테고리 중 하나의 드랍률을 증가시킵니다.",
