--- a/src/main/resources/assets/mmorpg/lang/ko_kr.json
+++ b/src/main/resources/assets/mmorpg/lang/ko_kr.json
@@ -1337,7 +1337,7 @@
  "mmorpg.stat.fire_cdr": "화염 주문 쿨타임 감소",
  "mmorpg.stat.fire_crit_taken": "화염 치명타 피해",
  "mmorpg.stat.fire_damage_aura_cost": "§7화염 피해 비용",
- "mmorpg.stat.fire_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §c☀ 화염§7 피해를 줍니다.",
+ "mmorpg.stat.fire_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §c☀ 화염§7 피해를 입힙니다.",
  "mmorpg.stat.fire_dot_damage": "화염 지속 피해",
  "mmorpg.stat.fire_focus": "화염 속성 집중",
  "mmorpg.stat.fire_health_leech": "§c☀ 화염§7 피해의 §a[VAL1]§7%를 체력으로 흡수",
@@ -1527,7 +1527,7 @@
  "mmorpg.stat.lightning_cdr": "번개 주문 쿨타임 감소",
  "mmorpg.stat.lightning_crit_taken": "번개 치명타 피해",
  "mmorpg.stat.lightning_damage_aura_cost": "§7번개 피해 비용",
- "mmorpg.stat.lightning_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §e☀ 번개§7 피해를 줍니다.",
+ "mmorpg.stat.lightning_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §e☀ 번개§7 피해를 입힙니다.",
  "mmorpg.stat.lightning_dot_damage": "번개 지속 피해",
  "mmorpg.stat.lightning_focus": "집중 번개",
  "mmorpg.stat.lightning_health_leech": "§e☀ 번개§7 피해의 §a[VAL1]§7%를 체력으로 흡수",
@@ -1742,7 +1742,7 @@
  "mmorpg.stat.unknown": "알려지지않은 스탯",
  "mmorpg.stat.water_any_wep_damage": "냉기 무기 피해",
  "mmorpg.stat.water_crit_taken": "냉기 치명타 피해",
- "mmorpg.stat.water_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §b☀ 냉기§7 피해를 줍니다.",
+ "mmorpg.stat.water_dmg_when_target_low_hp": "§7체력이 30% 미만인 대상에게 §a[VAL1]§7% 증가된 §b☀ 냉기§7 피해를 입힙니다.",
  "mmorpg.stat.water_dot_damage": "냉기 지속 피해",
  "mmorpg.stat.water_focus": "냉기 속성 집중",
  "mmorpg.stat.water_health_leech": "§b☀ 냉기§7 피해의 §a[VAL1]§7%를 체력으로 흡수",
@@ -1976,8 +1976,8 @@
  "spell.desc.frost_nova": "서리 폭풍을 소환하여 주변에 [calc:frost_nova] §b☀냉기§7피해를 입힙니다.",
  "spell.desc.frost_trap": "지면에 남아 있다가 적이 접근하면 활성화되는 함정을 던져 주변 지역에 [calc:ranger_trap]§b☀ 냉기§7 피해를 입힙니다.",
  "spell.desc.frostball": "얼음 조각을 던져 [calc:iceball] §b☀ 냉기§7 피해를 입히고, 오한을 중첩시킵니다.",
- "spell.desc.frozen_orb": "서리 오브를 던져 천천히 적을 향해 날아가며, 적중 시 [calc:iceball] §b☀ 냉기§7 광역 피해를 줍니다.",
- "spell.desc.gale_wind": "여러 개의 구름을 소환하여 밀쳐내고 [calc:gale_wind] §6☀ 물리§7 피해를 줍니다.",
+ "spell.desc.frozen_orb": "서리 오브를 던져 천천히 적을 향해 날아가며, 적중 시 [calc:iceball] §b☀ 냉기§7 광역 피해를 입힙니다.",
+ "spell.desc.gale_wind": "여러 개의 구름을 소환하여 밀쳐내고 [calc:gale_wind] §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.garden_of_thorns": "시전 지역에 [calc:thorn_consume] §6☀ 물리§7 피해를 입히며 가시를 걸고, 자신에게는 내면의 평온을 부여하여 매초 [calc:inner_calm] 마나를 회복합니다.",
  "spell.desc.gong_strike": "주위의 적을 내리쳐 [calc:gong_strike] §6☀ 물리§7 피해를 입힙니다.",
  "spell.desc.healing_aura": "주위 아군의 [calc:healing_aura] 생명력을 회복합니다.",
